# hive

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
.task/: PROGRESS.md
hooks/: install.sh  pre-commit
src/: doctor.rs  lib.rs  logging.rs  main.rs  presence.rs  routing.rs  signal.rs
src/buzz/: config.rs  mod.rs  output.rs  reminder.rs  signal.rs
src/buzz/watcher/: github.rs  mod.rs  sentry.rs  webhook.rs
src/channel/: mod.rs  telegram.rs
src/coordinator/: mod.rs
src/daemon/: config.rs  markdown.rs  mod.rs  origin_map.rs  session_store.rs  swarm_watcher.rs  tui_socket.rs
src/github/: mod.rs
src/hive/: __init__.py  cli.py
src/hive/commands/: ask_cmd.py  chat.py  context.py  daemon_cmd.py  doctor.py  init.py  issue_v2.py  menu.py  next_cmd.py  pick.py  plan_cmd.py  planner.py  show.py  start.py  status.py  worker.py
src/hive/core/: __init__.py  chat_prompt.py  chat_session.py  context.py  daemon.py  dashboard.py  defaults.py  deps.py  exceptions.py  gh.py  git.py  hive_state.py  plan.py  quest_github.py  reminders.py  signals.py  state.py  taskmd.py  tmux.py  worker_session.py  workspace.py
src/hive/models/: __init__.py  quest.py  workspace.py
src/hive/providers/: __init__.py  base.py  github.py  linear.py
src/keeper/: discovery.rs  mod.rs
src/keeper/tui/: app.rs  mod.rs  render.rs  theme.rs
src/pipeline/: artifacts.rs  context.rs  dispatch.rs  mod.rs  plan.rs  refine.rs  verify.rs
src/quest/: mod.rs
src/reminder/: duration.rs  mod.rs  store.rs  types.rs
src/ui/: app.rs  daemon_client.rs  history.rs  inbox.rs  markdown.rs  mod.rs  render.rs
src/worker/: mod.rs
src/workspace/: mod.rs
tests/: buzz_pipeline.rs  cli_smoke.rs  quest_store.rs  routing.rs  watcher_cursors.rs  workspace_integration.rs
