[package]
name = "hive"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Plan and coordinate the work. Quests, coordinator, context."

[dependencies]
apiari-common.workspace = true
apiari-claude-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
clap.workspace = true
color-eyre.workspace = true
chrono.workspace = true
uuid.workspace = true
